# tarxemo-django-authz

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
authz/: README.md  USAGE_EXAMPLES.md  admin.py  base.py  decorators.py  drf_permissions.py  engine.py  exceptions.py  mixins.py  models.py  mutations.py  policies.py  queries.py  schema.py  services.py  tests.py  tests_graphql.py  utils.py
authz/dto/: types.py
authz/dto_builders/: main.py
authz/management/commands/: seed_rbac.py
authz/migrations/: 0001_initial.py
authz/templatetags/: authz_tags.py
